--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.filters.FixCrLfFilter
-
 buildscript {
     repositories {
         gradlePluginPortal()
@@ -24,8 +22,9 @@ repositories {
 dependencies {
 /*    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'*/
-    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
-    compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
+    compileOnly 'com.pixelmonmod.pixelmon:Pixelmon:1.12.2-8.4.3'
     compileOnly 'me.fullidle.ficore:FICore:1.2.2'
     compileOnly fileTree(dir: 'libs', includes: ['*.jar'])
     compileOnly 'org.projectlombok:lombok:1.18.28'
