更新1.3.2,添加指令fiscript用于重载,这会把之前注册在本插件上的监听器都去掉,并清理脚本加载的class,虽然会提前执行disable的脚本等重载好后再执行enable的脚本

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,6 @@ name: ${rootProject.name}
 main: ${group}
 version: ${version}
 api-version: 1.16
+commands:
+  fiscript:
+    description: reload cmd
