--- a/build.gradle
+++ b/build.gradle
@@ -11,21 +11,24 @@ apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
 
 group = 'me.fullidle.fiscript.fiscript.Main'
-version = '1.3.1'
+version = '1.3.2'
 
 repositories {
     mavenCentral()
     mavenLocal()
+    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/'}
     maven { url 'https://raw.github.com/FullIdle/maven-repository/main/'}
 }
 
 dependencies {
 /*    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'*/
+    compileOnly 'me.clip:placeholderapi:2.11.5'
     compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
     compileOnly 'com.pixelmonmod.pixelmon:Pixelmon:1.12.2-8.4.3'
     compileOnly 'me.fullidle.ficore:FICore:1.2.2'
+    compileOnly 'me.forge.forgedev:ForgeDev:1.12.2'
     compileOnly fileTree(dir: 'libs', includes: ['*.jar'])
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
