--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,10 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.11.5'
     compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
-    compileOnly 'com.pixelmonmod.pixelmon:Pixelmon:1.12.2-8.4.3'
     compileOnly 'me.fullidle.ficore:FICore:1.2.2'
-    compileOnly 'me.forge.forgedev:ForgeDev:1.12.2'
-    compileOnly fileTree(dir: 'libs', includes: ['*.jar'])
+/*
+    compileOnly fileTree(dir: "libs")
+*/
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
 
