--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     useJUnitPlatform()
 }*/
 
-tasks.withType(JavaCompile){
+tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
 
