--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
 
-group = 'me.fullidle.fiscript.fiscript.Main'
+group = 'me.fullidle.fiscript.fiscript.FIScript'
 version = '1.3.4'
 
 repositories {
@@ -38,14 +38,9 @@ dependencies {
     implementation 'org.apache.groovy:groovy-all:4.0.15'
 }
 
-/*test {
-    useJUnitPlatform()
-}*/
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = "UTF-8"
+tasks.withType(JavaCompile){
+    options.encoding = 'UTF-8'
 }
-
 processResources {
     filesMatching('**/plugin.yml') {
         expand project.properties
