--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,9 +1,4 @@
-##可以是文件夹，也可以是文件,也可以没有后缀,如果要仔细一点的就需要用分割号了比如\\
-##文件夹会自动检测，并将文件夹内所有文件加入脚本
-##如果需要配置一个整个文件夹内的也脚本可以直接写文件夹名,会自动加载的
-cycle:
-  load:
-  enable:
-    - 'PlayerJointListener.groovy'
-    - 'PlayerQuitListener.groovy'
-  disable:
+##预留config.yml
+##脚本只会认.groovy的,带有main方法的会在周期enable的时候运行
+##脚本内类实现CycleScripts接口的会按照load,enable,disable周期运行
+##虽然是这几个周期不过一定是在FiScript加载之后!
