--- a/build.gradle
+++ b/build.gradle
@@ -13,36 +13,44 @@ apply plugin: 'java'
 group = 'me.fullidle.fiscript.fiscript.FIScript'
 version = '1.3.5'
 
-repositories {
-    mavenCentral()
-    mavenLocal()
-    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/'}
-    maven { url 'https://raw.github.com/FullIdle/maven-repository/main/'}
+
+allprojects {
+    apply plugin: 'java'
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        maven {
+            url = 'https://repo.extendedclip.com/releases/'
+        }
+        maven {
+            allowInsecureProtocol = true
+            url "http://server.pokemtd.top:31647/snapshots"
+        }}
+    dependencies {
+        /*spigot and plugin*/
+        compileOnly 'me.clip:placeholderapi:2.11.6'
+        compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+        compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
+        compileOnly 'me.fullidle.ficore.ficore:FICore:1.2.9'
+
+        /*lombok*/
+        compileOnly 'org.projectlombok:lombok:1.18.28'
+        annotationProcessor 'org.projectlombok:lombok:1.18.28'
+
+        /*groovy*/
+        // https://mvnrepository.com/artifact/org.apache.groovy/groovy-all
+        implementation 'org.apache.groovy:groovy-all:4.0.15'
+    }
 }
 
-dependencies {
-/*    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'*/
-    compileOnly 'me.clip:placeholderapi:2.11.5'
-    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
-    compileOnly 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
-    compileOnly 'me.fullidle.ficore:FICore:1.2.2'
-/*
-    compileOnly fileTree(dir: "libs")
-*/
-    compileOnly 'org.projectlombok:lombok:1.18.28'
-    annotationProcessor 'org.projectlombok:lombok:1.18.28'
-
-    /*groovy*/
-    // https://mvnrepository.com/artifact/org.apache.groovy/groovy-all
-    implementation 'org.apache.groovy:groovy-all:4.0.15'
+subprojects {
+    dependencies {
+        compileOnly rootProject
+    }
 }
 
-tasks.withType(JavaCompile){
-    options.encoding = 'UTF-8'
-}
 processResources {
-    filesMatching('**/plugin.yml') {
+    filesMatching('plugin.yml') {
         expand project.properties
     }
 }
